gradle: disable daemon creation
Signed-off-by: Sergey Smolov <smolov@ispras.ru>

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,4 @@ castleVersion=0.1.4-beta-200127
 testbaseVersion=0.0.24-alpha-191025
 jsoftfloatVersion=1.0.5-beta-161221
 qemuVersion=0.3.6-beta-SNAPSHOT
+org.gradle.daemon=false
