--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ version=2.5.2-beta-SNAPSHOT
 fortressVersion=0.4.34-beta-SNAPSHOT
 aspectraceapiVersion=1.0.1-alpha-191122
 castleVersion=0.1.4-beta-200127
-testbaseVersion=0.0.24-alpha-191025
+testbaseVersion=0.0.25-alpha-SNAPSHOT
 jsoftfloatVersion=1.0.5-beta-161221
 qemuVersion=0.3.6-beta-200430
 org.gradle.daemon=false
