gradle: fortressVersion=0.4.34-beta-200916
Signed-off-by: Sergey Smolov <smolov@ispras.ru>

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ projectName=microtesk
 repoUrl=https://forge.ispras.ru/nexus/content/repositories/
 mainClassName=ru.ispras.microtesk.MicroTESK
 version=2.5.2-beta-SNAPSHOT
-fortressVersion=0.4.34-beta-SNAPSHOT
+fortressVersion=0.4.34-beta-200916
 aspectraceapiVersion=1.0.1-alpha-191122
 castleVersion=0.1.4-beta-200127
 testbaseVersion=0.0.25-alpha-SNAPSHOT
